{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 70,
  "lineage": "ea2673ac-99d7-858b-842c-b60f84ecc1ab",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05cbab94d2d313aea",
            "domain": "vpc",
            "id": "eipalloc-05cbab94d2d313aea",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-229-76-186.compute-1.amazonaws.com",
            "public_ip": "3.229.76.186",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpciti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:191804143474:instance/i-0a02f46a9cf78c011",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a02f46a9cf78c011",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a9cfe8ad144b118b",
            "private_dns": "ip-10-0-1-102.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-092b5b7352c5bdfe6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05f6de4f05a2ca70d",
            "tags": {
              "Name": "terra-private"
            },
            "tags_all": {
              "Name": "terra-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-069bb7be4fe7551a2"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.subnets",
            "aws_vpc.vpciti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:191804143474:instance/i-062bf8637572266c4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-062bf8637572266c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00b3d94b9b1a4f751",
            "private_dns": "ip-10-0-0-228.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.228",
            "public_ip": "54.89.128.122",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01d483674dfcc70fd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c7774c6e4d9e5f48",
            "tags": {
              "Name": "terra-public"
            },
            "tags_all": {
              "Name": "terra-public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-069bb7be4fe7551a2"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.subnets",
            "aws_vpc.vpciti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191804143474:internet-gateway/igw-01befd72a2dc1c411",
            "id": "igw-01befd72a2dc1c411",
            "owner_id": "191804143474",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0f728c463868b299a"
          },
          "dependencies": [
            "aws_vpc.vpciti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05cbab94d2d313aea",
            "connectivity_type": "public",
            "id": "nat-00f1616dc18c97270",
            "network_interface_id": "eni-0d5571e1cb49184e5",
            "private_ip": "10.0.0.245",
            "public_ip": "3.229.76.186",
            "subnet_id": "subnet-0c7774c6e4d9e5f48",
            "tags": {
              "Name": "nat-gw"
            },
            "tags_all": {
              "Name": "nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.subnets",
            "aws_vpc.vpciti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pb_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01befd72a2dc1c411",
            "id": "r-rtb-0ad7314dedb37652f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ad7314dedb37652f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.vpciti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pv_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a3459e1350b285481080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00f1616dc18c97270",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a3459e1350b28548",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.private",
            "aws_subnet.subnets",
            "aws_vpc.vpciti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191804143474:route-table/rtb-0a3459e1350b28548",
            "id": "rtb-0a3459e1350b28548",
            "owner_id": "191804143474",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_rt"
            },
            "tags_all": {
              "Name": "private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f728c463868b299a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpciti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191804143474:route-table/rtb-0ad7314dedb37652f",
            "id": "rtb-0ad7314dedb37652f",
            "owner_id": "191804143474",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public_rt"
            },
            "tags_all": {
              "Name": "public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f728c463868b299a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpciti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3e8ee46dbece313",
            "route_table_id": "rtb-0a3459e1350b28548",
            "subnet_id": "subnet-05f6de4f05a2ca70d"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.subnets",
            "aws_vpc.vpciti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04390b59445e6c09a",
            "route_table_id": "rtb-0ad7314dedb37652f",
            "subnet_id": "subnet-0c7774c6e4d9e5f48"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.subnets",
            "aws_vpc.vpciti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191804143474:security-group/sg-069bb7be4fe7551a2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069bb7be4fe7551a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg",
            "name_prefix": "",
            "owner_id": "191804143474",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sec-group"
            },
            "tags_all": {
              "Name": "sec-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f728c463868b299a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpciti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191804143474:subnet/subnet-0c7774c6e4d9e5f48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7774c6e4d9e5f48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "191804143474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public and private subnet"
            },
            "tags_all": {
              "Name": "public and private subnet"
            },
            "vpc_id": "vpc-0f728c463868b299a"
          },
          "dependencies": [
            "aws_vpc.vpciti"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191804143474:subnet/subnet-05f6de4f05a2ca70d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f6de4f05a2ca70d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "191804143474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public and private subnet"
            },
            "tags_all": {
              "Name": "public and private subnet"
            },
            "vpc_id": "vpc-0f728c463868b299a"
          },
          "dependencies": [
            "aws_vpc.vpciti"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpciti",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:191804143474:vpc/vpc-0f728c463868b299a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02616d48ce3fd844f",
            "default_route_table_id": "rtb-0d4cf1f8c61d11049",
            "default_security_group_id": "sg-0cc3039beb8544f38",
            "dhcp_options_id": "dopt-0ef5bd1c500a06d04",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f728c463868b299a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d4cf1f8c61d11049",
            "owner_id": "191804143474",
            "tags": {
              "Name": "vpciti"
            },
            "tags_all": {
              "Name": "vpciti"
            }
          }
        }
      ]
    }
  ]
}